force-app/main/default/objects/Resource_Project__c/Resource_Project__c.object-meta.xml
<CustomObject>
    <label>Resource / Project</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Resource / Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>