force-app/main/default/objects/Resource_Project__c/fields/Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Amount__c</fullName>
    <label>Estimated Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>