force-app/main/default/objects/Resource_Project__c/fields/Project_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Project_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Line Item</label>
    <referenceTo>Project_Line_Item__c</referenceTo>
    <relationshipLabel>Resources Projects</relationshipLabel>
    <relationshipName>Resources_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>