force-app/main/default/objects/Resource_Project__c/fields/Worked_Hours__c.field-meta.xml
<CustomField>
    <fullName>Worked_Hours__c</fullName>
    <label>Worked Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>